--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>13 Burger House</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./estilos/estilo.css">
 </head>
@@ -15,7 +16,7 @@
     <div id="grilla">
     <header>
         <figure>
-            <img src="./img/banner.png" alt="Logo 13">
+            <img src="./img/banner.png" alt="Logo 13" data-aos="flip-left">
         </figure>    
     </header>
    
@@ -53,10 +54,12 @@
         Medios de pago:
     </footer>
  
-  
+
 </div>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </body>
-
-
-
 </html>
