--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -6,66 +6,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>13 Burger House</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../estilos/estilo.css">
 </head>
 
 <body>
 
-    <header>
-        <figure>
-            <img src="../img/banner.png" alt="Logo 13">
-        </figure>
-    </header>
-    
-        <nav class="navFlex">
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="quienessomos.html">¿Quienes somos?</a>
-                </li>
-                <li>
-                    <a href="menu.html">Menu</a>
-                </li>
-                <li>
-                    <a href="delipromo.html">Delivery/Promociones</a>
-                </li>
-                <li>
-                    <a href="contacto.html">Contactanos</a>
-                </li>
-            </ul>
+    <div id="grillaContacto">
+
+        <header>
+            <figure>
+                <img src="../img/banner.png" alt="Logo 13" data-aos="flip-left">
+            </figure>
+        </header>
+
+        <nav id="barra" class="navbar navbar-expand-lg navbar-light bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="quienessomos.html">¿Quienes somos?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="menu.html">Menu</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="delipromo.html">Delivery/Promociones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="contacto.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
-    
 
 
+        <section id="contacto">
+            <article>
+                <form action="#">
+                    <input type="text" placeholder="Ingrese su nombre"><br>
+                    <label for="email">Ingrese email:
+                        <input type="email" placeholder="ejemplo@gmail.com" name="email"><br>
+                    </label>
+                    <label for="Observaciones:"> <br> Deje aquí su mensaje:
+                        <textarea placeholder="Observaciones"></textarea>
+                    </label> <br>
 
-    <section id="contacto">
-        <article>
-            <form action="#">
-                <input type="text" placeholder="Ingrese su nombre"><br>
-                <label for="email">Ingrese email:
-                    <input type="email" placeholder="ejemplo@gmail.com" name="email"><br>
-                </label>
-                <label for="Observaciones:"> <br> Deje aquí su mensaje:
-                    <textarea placeholder="Observaciones"></textarea>
-                </label> <br>
+                    <div>Queres recibir nuestras promos?
+                        <input type="checkbox" name="acepta" value="1">
+                    </div>
+                    <input type="submit" value="Suscribirse">
+                    <input type="reset" value="Borrar">
+                </form>
+            </article>
+        </section>
 
-                <div>Queres recibir nuestras promos?
-                    <input type="checkbox" name="acepta" value="1">
-                </div>
-                <input type="submit" value="Suscribirse">
-                <input type="reset" value="Borrar">
-            </form>
-        </article>
-    </section>
+        <footer>
+            Horarios: Miercoles a Domingo 20:00 a 00:00
+            Medios de pago:
+        </footer>
 
-    <footer>
-        Horarios: Miercoles a Domingo 20:00 a 00:00
-        Medios de pago:
-    </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
