--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="shortcut icon" href="./img/favicon.png">
-  <link rel="stylesheet" href="./estilos/estilo.css">
+  <link rel="stylesheet" href="./estilos/Style.css">
 </head>
 
 
