--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
       </div>
     </nav>
 
-    <p id="intro">Nacimos como empresa en 2018, bajo la premisa "Fast Gourmet" con la cual queremos llevar a tu mesa
-      comida rapida con los <b>MEJORES</b> ingredientes y combinaciones</p>
+    <div>
+      <p class="intro">Nacimos como empresa en 2018, bajo la premisa "Fast Gourmet" con la cual queremos llevar a tu mesa
+        comida rapida con los <b>MEJORES</b> ingredientes y combinaciones</p>
+    </div>
 
 
     <footer>
